<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="sharemessage">This marvelous colorized image was generated by a project from CPSC 475, Android mobile programming.  Please contact Prof. Keith Perkins at keith.perkins@cnu.edu if you have any questions about our department or the classes we offer or technology in general.</string>
    <string name="shareTitle">Welcome to CNU from the PCSE department!</string>
    <string name="reset">reset</string>
    <string name="edit">edit</string>
    <string name="sketch">sketch</string>
    <string name="share">share</string>
    <string name="settings">settings</string>
    <string name="colorize">colorize</string>
    <string name="Share_Subject">Share Subject</string>
    <string name="Subject">Subject</string>
    <string name="Text">Text</string>
    <string name="Share_Text">Share Text</string>
    <string name="Sketchiness">Sketchiness</string>
    <string name="Saturation">Saturation</string>
    <string name="textSummary">this is the text you would like to share</string>
    <string name="subjectSummary">this is the subject of the message you would like to share</string>
    <string name="shareOptions">Share Options</string>
    <string name="renderingOptions">Rendering Options</string>
    <string name="renderingOptionsSummary">Level of sketchiness and color saturation</string>

</resources>